--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -32,13 +32,13 @@ body {
 }
 
 .cardInfo {
-  max-width: 10rem;
-  height: 15rem;
   background-color: black;
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 10rem;
+  height: 15rem;
 }
 .cardInfo img {
   width: 140px;
@@ -47,26 +47,24 @@ body {
 }
 @media (min-width: 1024px) {
   .cardInfo {
-    max-width: 20rem;
-    height: 25rem;
     background-color: black;
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 20rem;
+    height: 25rem;
     justify-content: center;
   }
 }
 
-.cardInfo .descCard {
+.cardInfo .descCard, .cardInfo .titleCard {
   color: white;
   font-size: x-small;
   font-weight: bold;
 }
 
 .cardInfo .titleCard {
-  color: white;
-  font-weight: bold;
   font-size: small;
 }
 
