--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -1,5 +1,5 @@
 .contactPage {
-    background-image: url(../images/1.JPG);
+    background-image: url(../images/mainImg/1-min.JPG);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
