--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -7,12 +7,13 @@ footer {
 
 .flexContainer {
     display: flex;
-    height: 50px;
+    
     align-items: center;
     list-style-type: none;
     justify-content: center;
     li {
         padding: 2rem;
+        height: 30px;
     }
     ul {
         width: 100%;
@@ -23,4 +24,22 @@ footer {
 .redes {
     max-width: 30px;
     max-height: 30px;
+}
+.gridFooter{
+    display: grid;
+    height: 50px;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+}
+.footerSecciones ul{
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    a{
+        text-decoration: none;
+        color: black;
+        padding: 1rem;
+    }
+    
 }
