--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -21,6 +21,7 @@ body {
   display: flex;
   width: 100%;
   margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 @media (min-width: 1024px) {
   .containerCards {
@@ -453,4 +454,10 @@ footer {
   text-decoration: none;
   color: black;
   padding: 1rem;
+  font-size: x-small;
+}
+@media (min-width: 1024px) {
+  .footerSecciones ul a {
+    font-size: medium;
+  }
 }/*# sourceMappingURL=estilos.css.map */
