--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -12,6 +12,7 @@
     display: flex;
     width: 100%;
     margin-top: 2rem;
+    margin-bottom: 1rem;
     @media(min-width:1024px){
         display: flex;
         width: 100%;
