--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -52,14 +52,15 @@
 }
 
 .mainImg {
+    width: 100%;
     display: flex;
     justify-content: center;
     img {
         width: 100%;
         max-height: 300px;
         @media(min-width:768px){
-            width: 100%;
-            height: 500px;
+            
+            min-height: 500px;
             margin-top: 0;
         }
         @media(min-width:1024px){
@@ -67,14 +68,7 @@
         }
     
     }
-    @media(min-width:1024px){
-        width: 100%;
-
-        margin-right: 10rem;
-        margin-bottom: 1rem;
-        margin-top: 2px;
-    }
-
+    
 }
 
 
@@ -90,7 +84,7 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    gap: 2rem;
+    gap: 1rem;
     justify-items: center;
     img {
         width: 268px;
@@ -99,12 +93,12 @@
         @media(min-width:768px){
             width: 200px;
             height: 250px;
-            margin-bottom: 1rem;
+           
         }
         @media(min-width:1024px){
-            width: 368px;
-            height: 433px;
-            margin-bottom: 1rem;
+            width: 200px;
+            height: 300px;
+            
         }
     }
     @media(min-width:768px) {
