--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -13,6 +13,7 @@ nav ul li a:hover {
 .navcolor {
     background-color: $white;
     min-height: 5rem;
+    width: 100%;
     @media(min-width:1024px){
         border-bottom: 2px solid black;
     }
