--- a/sass/_nosotros.scss
+++ b/sass/_nosotros.scss
@@ -5,13 +5,15 @@
     background-position: center center;
     width: auto;
     height: auto;
-    
+
 }
+
 .nosotros {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
     h2 {
         font-size: 2rem;
         width: 100%;
@@ -19,11 +21,13 @@
         margin-top: 2rem;
         margin-bottom: rem;
         color: $white;
-        @media(min-width:1024px){
+
+        @media(min-width:1024px) {
             grid-area: titulo;
             font-size: 4rem;
         }
     }
+
     p {
         font-size: 1rem;
         text-align: center;
@@ -31,12 +35,14 @@
         margin-left: 1rem;
         margin-bottom: 4rem;
         color: $white;
-        @media(min-width:1024px){
+
+        @media(min-width:1024px) {
             grid-area: info;
             font-size: 1.5rem;
         }
     }
-    @media(min-width:1024px){
+
+    @media(min-width:1024px) {
         margin-left: 20rem;
         margin-right: 20rem;
         padding-top: 10rem;
@@ -50,7 +56,8 @@
     margin-bottom: 2rem;
     font-weight: bold;
     color: $white;
-    @media(min-width:1024px){
+
+    @media(min-width:1024px) {
         width: 100%;
         text-align: center;
         margin-top: 0;
@@ -70,6 +77,7 @@
     align-items: center;
     padding-bottom: 1rem;
     margin-left: 3rem;
+
     p {
         margin-bottom: 0;
         margin-left: 50px;
@@ -77,12 +85,14 @@
         margin-right: 5rem;
         color: $white;
     }
-    @media(min-width:1024px){
+
+    @media(min-width:1024px) {
         margin-left: 10rem;
     }
 }
-.divAbout{
-    @media(min-width:1024px){
+
+.divAbout {
+    @media(min-width:1024px) {
         height: 10px;
         border-width: 0;
         color: $white;
@@ -92,9 +102,67 @@
     }
 }
 
-.faqTitle{
+.faqTitle {
     margin: auto;
     color: black;
     text-align: center;
     margin-top: 2rem;
+}
+
+.faq {
+    max-width: 100%;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+
+    summary {
+        font-size: 1.25rem;
+        font-weight: 600;
+        background-color: black;
+        color: white;
+        padding: 1rem;
+        margin-bottom: 1rem;
+        outline: none;
+        border-radius: 0.25rem;
+        text-align: left;
+        cursor: pointer;
+        position: relative;
+    }
+
+    details[open] summary~* {
+        animation: sweep .5s ease-in-out;
+    }
+
+    @keyframes sweep {
+        0% {
+            opacity: 0;
+            margin-top: -10px
+        }
+
+        100% {
+            opacity: 1;
+            margin-top: 0px
+        }
+    }
+
+    details>summary::after {
+        position: absolute;
+        content: "+";
+        right: 20px;
+    }
+
+    details[open]>summary::after {
+        position: absolute;
+        content: "-";
+        right: 20px;
+    }
+
+    details>summary::-webkit-details-marker {
+        display: none;
+    }
+
+    @media(min-width:1024px) {
+        margin-left: 300px;
+        margin-right: 300px;
+    }
 }
