--- a/sass/_producto.scss
+++ b/sass/_producto.scss
@@ -12,18 +12,18 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
-    gap: 1rem;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: auto;
+    margin-right: auto;
     justify-items: center;
+    width: 100%;
     img {
         width: 168px;
         height: 233px;
         margin-bottom: 1rem;
         @media(min-width:1024px){
-            width: 368px;
-            height: 433px;
-            margin-bottom: 1rem;
+            width: 200px;
+            height: 300px;
+          
         }
     }
     @media(min-width:768px){
@@ -31,17 +31,14 @@
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr;
         gap: 1rem;
-        margin-left: 5px;
-        margin-right: 5px;
+        
         justify-items: center;
     }
     @media(min-width:1024px){
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr;
-        gap: 4rem;
-        margin-left: 7rem;
-        margin-right: 7rem;
+        
         justify-items: center;
     }
 }
@@ -57,6 +54,7 @@
         text-align: center;
     
     }
+    
 }
 
 .precio {
