--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -201,6 +201,9 @@ body {
   margin-bottom: 1rem;
   text-align: center;
 }
+.detalleprod .productIcons {
+  display: flex;
+}
 
 .precio {
   font-weight: bold;
